feat(book): 电子书功能增强
应用层：
- BookApplicationService: 图书服务更新
- ChapterApplicationService: 章节服务更新
- UploadBookCommand: 上传命令更新
- BookDTO/ChapterDTO/ChapterContentDTO: DTO 更新

领域层：
- Chapter: 章节实体更新
- ChapterRepository: 章节仓储接口更新
- ContentSecurityService: 内容安全服务

基础设施：
- EpubBookParser: EPUB 解析器
- PdfBookParser: PDF 解析器
- TxtBookParser: TXT 解析器
- WordBookParser: Word 解析器
- ChapterRepositoryImpl: 章节仓储实现
- PostgresBookSearchService: 图书搜索服务

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>